--- a/src/main/resources/templates/dailySummaries.html
+++ b/src/main/resources/templates/dailySummaries.html
@@ -8,7 +8,7 @@
     
     <p th:if="${message}" th:text="${message}"></p>
 
-    <table th:if="${weatherData}" border="1">
+    <table th:if="${summaries}" border="1">
         <thead>
             <tr>
                 <th>City</th>
