--- a/src/main/resources/templates/dailySummaries.html
+++ b/src/main/resources/templates/dailySummaries.html
@@ -10,6 +10,7 @@
     <div class="navbar">
         <a href="/">Home</a>
         <a href="/daily-summaries">Daily Summaries</a>
+        <a href="/weather-summary">Weather Summary</a>
         <a href="/alerts">Alerts</a>
     </div>
     <div class="container">
