--- a/src/main/resources/templates/weatherSummary.html
+++ b/src/main/resources/templates/weatherSummary.html
@@ -11,6 +11,7 @@
         <a th:href="@{/home}">Home</a>
         <a th:href="@{/daily-summaries}">Daily Summaries</a>
         <a th:href="@{/weather-summary}">Weather Summary</a>
+        <a th:href="@{/forecast}">Forecast</a>
         <a th:href="@{/alerts}">Alerts</a>
     </div>
 
