--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,6 +11,7 @@
         <a href="/">Home</a>
         <a href="/daily-summaries">Daily Summaries</a>
         <a href="/weather-summary">Weather Summary</a>
+        <a href="/forecast">Forecast</a>
         <a href="/alerts">Alerts</a>
     </div>
     <div class="container">
