--- a/src/main/resources/templates/forecast.html
+++ b/src/main/resources/templates/forecast.html
@@ -8,7 +8,7 @@
 <body>
     <!-- Navigation Bar -->
     <div class="navbar">
-        <a th:href="@{/home}">Home</a>
+        <a th:href="@{/}">Home</a>
         <a th:href="@{/daily-summaries}">Daily Summaries</a>
         <a th:href="@{/weather-summary}">Weather Summary</a>
         <a th:href="@{/forecast}">Forecast</a>
@@ -159,5 +159,8 @@
             }
         });
     </script>
+        <div class="footer">
+            <p>&copy; 2024 Weather Monitoring Application</p>
+        </div>
 </body>
 </html>
